2012-07-18  Andrew Pinski  <apinski@cavium.com>             Chandrakala Chavva  <cchavva@caviumnetworks.com>             Adam Nemet  <anemet@caviumnetworks.com>
	* Makefile.in (ALLDEPFILES): Add remote-octeon.c and remote-run.c.
	* breakpoint.c (remove_breakpoint_1): Call target_remove_mc_hw_breakpoint instead of
	target_remove_hw_breakpoint.
	(breakpoint_thread_match): If the core numbers don't match the current core number
	skip it.
	(print_one_breakpoint_location): Print the core number also.
	(init_raw_breakpoint_without_location): Initialize core_number and momentary.
	(hw_breakpoint_used_count): Return hardware breakpoint count per core.
	(set_momentary_breakpoint): Set the core_number of the breakpoint.
	(insert_watchpoint): Call target_insert_mc_watchpoint instead of
	target_insert_watchpoint.
	(remove_watchpoint): Call target_remove_mc_watchpoint instead of
	target_remove_watchpoint.
	(breakpoint_hit_watchpoint): Return 0 if the core number does not match
	the current core.
	(watch_command_1): Initialize core_number.
	(bkpt_insert_location): Call target_insert_mc_hw_breakpoint instead of
	target_insert_hw_breakpoint.
	(bkpt_remove_location): Call target_remove_mc_hw_breakpoint instead of
	target_remove_hw_breakpoint.
	* breakpoint.h (struct bp_location): New fields core_number and momentary.
	* config.in: Regenerate.
	* configure: Likewise.
	* configure.ac: Define DEFAULT_PROMPT to "(Core#0-gdb) " for
	Octeon Simple-exec.
	* configure.tgt (mips*-*-linux*): Add emote-octeon.o remote-run.o.
	(mipsisa64-octeon-elf*): New target.
	* defs.h (setup_generic_remote_run): New prototype.
	(generic_remote_can_run_target): Likewise.
	(generic_remote_create_inferior): Likewise.
	(never_print_frame): Declare variable.
	* doc/gdbint.texinfo: Added documentation about new functions.
	* dwarf2-frame.c (decode_frame_entry_1): Fix the target address size.
	* infrun.c (never_print_frame): New variable.
	(start_remote): Use it.
	(execution_control_state): Add core_number field.

--- a/gdb/Makefile.in
+++ b/gdb/Makefile.in
@@ -1650,6 +1650,7 @@ ALLDEPFILES = \
 	procfs.c \
 	ravenscar-thread.c \
 	remote-m32r-sdi.c remote-mips.c \
+	remote-octeon.c remote-run.c \
 	remote-sim.c \
 	dcache.c \
 	rl78-tdep.c \
